arm_sve2/ms2/output/output-9777.err
run_regblock_ms2.cpp: In function ‘void arm_sve_conv_fp_original(conv_t*, const float*, float*, const float*, const float*)’:
run_regblock_ms2.cpp:185:67: error: ‘kj’ has not been declared
  185 |     #pragma omp parallel for private(n, k_b, c_b, oj, oi, ij, ii, kj, ki)
      |                                                                   ^~
run_regblock_ms2.cpp:185:71: error: ‘ki’ has not been declared
  185 |     #pragma omp parallel for private(n, k_b, c_b, oj, oi, ij, ii, kj, ki)
      |                                                                       ^~
srun: Job step aborted: Waiting up to 32 seconds for job step to finish.
slurmstepd: error: *** JOB 9777 ON ss02-gh01 CANCELLED AT 2023-12-14T01:06:38 DUE TO TIME LIMIT ***
slurmstepd: error: *** STEP 9777.5 ON ss02-gh01 CANCELLED AT 2023-12-14T01:06:38 DUE TO TIME LIMIT ***
